--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <body>
         <div class="header">
             <h1> MD Movie colletion </h1>
+            <input></div>input>
+            <button>
+
+            </button>
         </div>
+
 
 
 
