--- a/index.html
+++ b/index.html
@@ -4,23 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MDmovie</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="mdmovie.css">
-    <script src="mdmovie.js"></script>
 </head>
 
 <body>
-        <div class="header">
-            <h1> MD Movie colletion </h1>
-            <input></div>input>
-            <button>
-
-            </button>
+    <div class="header">
+        <div class="maintext">
+            <h1> MD Movie collection</h1>
         </div>
+        <div class="seabrt">
+            <div class="input-group mb-3">
+                <input id="mvsearch" type="text" class="form-control" placeholder="영화 제목을 검색해 보세요"
+                    aria-label="Recipient's username" aria-describedby="button-addon2"
+                    onkeypress="if (event.key === 'Enter') Search()"></input>
+                <button onclick="Search()" class="btn btn-outline-secondary" type="button"
+                    id="button-addon2">검색</button>
+            </div>
+        </div>
+    </div>
+    <sectio class="mvcards">
+        <div class="" id="" style="display: block;">
+            <img src="" alt="">
+            <h3 class="mvname">
+
+            </h3>
+            <p>
+
+            </p>
+            <P>
+
+            </P>
+        </div>
+        </section>
+
+
 
 
 
 
 </body>
+<script src="mdmovie.js"></script>
 
 </html>
